tests-integration/tests/custom/semantic-errors/invalid-domain-02/stderr.expected
Error:
    model.eprime:1:13:
  |
1 | find x: int(1..)
  |             ^^^
Invalid Domain


